--- a/docs/team/johndoe.adoc
+++ b/docs/team/johndoe.adoc
@@ -1,17 +1,17 @@
-= John Doe - Project Portfolio
+= Wang Shiyao - Project Portfolio Page
 :site-section: AboutUs
 :imagesDir: ../images
 :stylesDir: ../stylesheets
 
-== PROJECT: AddressBook - Level 3
+== PROJECT: LiBerry
 
 ---
 
 == Overview
 
-AddressBook - Level 3 is a desktop address book application used for teaching Software Engineering principles. The user interacts with it using a CLI, and it has a GUI created with JavaFX. It is written in Java, and has about 10 kLoC.
+Liberry is a desktop app for community and private library librarians to manage their inventory and loans. It is a software optimized for librarians who prefer to work with a Command Line Interface (CLI), and has a GUI created with JavaFX. The software is written in Java, and has about 10k Lines of Code.
 
-== Summary of contributions
+== Summary of Contributions
 
 * *Major enhancement*: added *the ability to undo/redo previous commands*
 ** What it does: allows the user to undo all previous commands one at a time. Preceding undo commands can be reversed by using the redo command.
@@ -44,8 +44,6 @@ AddressBook - Level 3 is a desktop address book application used for teaching So
 _{you can add/remove categories in the list above}_
 
 == Contributions to the User Guide
-
-
 |===
 |_Given below are sections I contributed to the User Guide. They showcase my ability to write documentation targeting end-users._
 |===
