--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -39,23 +39,27 @@ Refer to <<Features>> for details of each command.
 === Adding a meal: `add`
 
 Adds a meal that the user ate to be tracked by CaloFit. +
-Format: `add MEAL_NAME [/cal CALORIES]`
+Inputting calories of the meal is optional. +
+If the meal is a dish stored in CaloFit, the calories will be taken from CaloFit. If not, the default value is 700. +
+Tags are completely optional and there is no default tag. +
+Format: `add n/MEAL_NAME [c/CALORIES] [t/TAGS]`
 
 Examples:
 
-* `add spaghetti /cal 480`
-* `add chicken rice`
+* `add n/spaghetti c/480 t/tasty`
+* `add n/chicken rice c/500`
+* `add n/mushroom soup`
 
 === Editing previous meal entry : `edit`
 
 Edits a meal that the user previously ate today. +
-Format: `edit MEAL_NUMBER [/name NAME] [/cal CALORIES]`
+Format: `edit MEAL_NUMBER [n/NAME] [c/CALORIES]`
 
 Examples:
 
-* `edit 1 wanton noodle /cal 1000`
-* `edit 2 chicken rice`
-* `edit 3 /cal 500`
+* `edit 1 n/wanton noodle c/1000`
+* `edit 2 n/chicken rice`
+* `edit 3 c/500`
 * `edit 4`
 
 === Deleting previous meal entry : `delete`
@@ -100,10 +104,10 @@ Format: `help`
 
 == Command Summary
 
-* *Add* `add MEAL_NAME [/cal CALORIES]` +
-e.g. `add duck rice /cal 360`
-* *Edit* : `edit MEAL_NUMBER [/name MEAL_NAME] [/cal CALORIES]` +
-e.g. `edit 1 duck noodle /cal 250`
+* *Add* `add n/MEAL_NAME [c/CALORIES]` +
+e.g. `add n/duck rice c/360`
+* *Edit* : `edit MEAL_NUMBER [n/MEAL_NAME] [c/CALORIES]` +
+e.g. `edit 1 n/duck noodle c/250`
 * *Delete* : `delete MEAL_NUMBER` +
 e.g. `delete 3`
 * *Suggest* : `suggest`
