Add Schedule command (#88)
* Add Schedule command

The basic form of schedule is available and it will accept all
regimes scheduled at a date. No conflicts are brought up or resolved.

* Add Schedule Command to model and logic

Remaining components to edit are storage and ui and lastly tests.

* Implement saving of schedules for regimes

* Modify UI to display regime on left, schedule on right

* Fix checkstyle and tests to pass build

* Add support for completing schedules in schedule list

Edited user guide and changed prefix of completing schedule regime.
It makes more sense to place i for index instead of f

* Fix spelling and custom property integration

* Fix UI bugs and integrate suggest command

* Fix checkstyle

* Fix comments

* Fix SLAP methods

Closes #57 and Closes #60

--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -340,13 +340,13 @@ Example:
 
 ==== Completes a schedule regime
 
-Once a scheduled regime is completed, users can add that regime to the exercise tracker.
+Once a scheduled regime is completed, users can add that regime to the exercise tracker. The schedule is then deleted from the scheduling list.
 
-Format: `schedule f/INDEX_OF_REGIME_IN_SCHEDULE`
+Format: `schedule i/INDEX_OF_REGIME_IN_SCHEDULE`
 
 Example:
 
-* `schedule f/2`
+* `schedule i/2`
 
 [[resolve]]
 === Resolving scheduling conflicts: `resolve`
