--- a/docs/tutorials/TracingCode.adoc
+++ b/docs/tutorials/TracingCode.adoc
@@ -11,7 +11,7 @@ endif::[]
 
 [quote, Robert C. Martin, Clean Code: A Handbook of Agile Software Craftsmanship ]
 Indeed, the ratio of time spent reading versus writing is well over 10 to 1. We are constantly reading old code as
-part of the effort to write new code.  ...[Therefore,] making it Feaseasy to read makes it easier to write.
+part of the effort to write new code.  ...[Therefore,] making it easy to read makes it easier to write.
 
 When trying to understand an unfamiliar code base, one common strategy used is to trace some representative execution
 path through the code base. One easy way to trace an execution path is to use a debugger to step through the code.
