--- a/docs/UsingGradle.adoc
+++ b/docs/UsingGradle.adoc
@@ -28,7 +28,7 @@ To run a Gradle command, open a command window on the project folder and enter t
 `./gradlew clean test`
 
 [NOTE]
-If you do not specify any tasks, Gradlew will run the default tasks `clean` `test` `coverage`
+If you do not specify any tasks, Gradlew will run the default tasks `clean` and `test`.
 
 == Cleaning the Project
 
