--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -367,6 +367,7 @@ Priorities:
 
 (For all use cases below, the system is `NUStudy` and the actor is the `student`)
 
+// tag::usecase[]
 [discrete]
 === Use case: Create lecture note (Jeremy)
 
@@ -414,6 +415,7 @@ Use case ends
 ** 1a2. Student re-enters the command
 ** Repeat 1a1 and 1a2 until a valid index is provided
 * Use case resumes from step 2
+// end::usecase[]
 
 [discrete]
 === Use case: Add a revision task to revision plan (Shui Yao)
@@ -697,6 +699,7 @@ Use case ends
 ** a2. Application exits from the test mode
 * Use case ends
 
+// tag::nfrglossary[]
 [appendix]
 == Non-functional requirements
 
@@ -711,6 +714,7 @@ rather than merely linking to somewhere on the filesystem
 [[lecture-note]] Lecture note::
 An object stored in the application model that includes a title, text content and optionally an image.
 It is not quizzable.
+// end::nfrglossary[]
 
 [appendix]
 == Instructions for Manual Testing
