--- a/docs/UsingTravis.adoc
+++ b/docs/UsingTravis.adoc
@@ -18,7 +18,7 @@ Travis CI can run the projects' tests automatically whenever new code is pushed 
 
 The current Travis CI set up performs the following things whenever someone push code to the repo:
 
-* Runs the `./gradlew clean test coverage coveralls -i` command (see <<UsingGradle#, UsingGradle>> for more details on what this command means).
+* Runs the `./gradlew clean test -i` command (see <<UsingGradle#, UsingGradle>> for more details on what this command means).
 * Renders documentation from asciidoc to html and automatically publishes them using GitHub Pages.
 * Runs additional link:#repository-wide-checks[repository-wide checks].
 
@@ -60,7 +60,6 @@ image:build_pending.png[Commit build]
 +
 image:travis_build.png[Travis build]
 +
-.  If the build is successful, you should be able to check the coverage details of the tests at http://coveralls.io/[Coveralls]
 .  Update the link to the 'build status' badge at the top of the `README.adoc` to point to the build status of your own repo.
 
 == Enabling auto-publishing of documentation
