--- a/docs/AboutUs.adoc
+++ b/docs/AboutUs.adoc
@@ -12,10 +12,10 @@ We are a team based in https://www.comp.nus.edu.sg[School of Computing, National
 
 === Jeremy Tan Jie Rui
 image::parcly-taxel.png[width="150", align="left"]
-{empty}[https://github.com/Parcly-Taxel[github]] [https://github.com/irene-lly[portfolio]]
+{empty}[https://github.com/Parcly-Taxel[github]] [<<PortfolioParclyTaxel#, portfolio>>]
 
-Role: Integration lead, Scheduling and tracking, Git expert +
-Responsibilities: Implementing `Note` module
+Role: Main integrator, scheduling and tracking manager, Git expert +
+Responsibilities: Implementing `Note` module (lecture notes)
 
 '''
 
